tests/NormalTests/paczka1/fuzzy1/84775065.err
Error in line 2: oC6 S548 59,1
Error in line 10: oLrJWOzf0 S548 34,3
Error in line 5: ppbd5LqP S548 15,1
Error in line 6: 2YP S548 29,1
Error in line 24: oLrJWOzf0 S54X 66,4
Error in line 32: 2YP S901 88,8
Error in line 34: uuczLIE A324 -1,1
Error in line 33: 2YP S548 45,2
Error in line 23: A20 A324 91,4
Error in line 27: oLrJWOzf0 S548 43,2
